atualização de css

--- a/css/banner.css
+++ b/css/banner.css
@@ -37,7 +37,7 @@
     background-color: #e63888;
 }
 
-.bloco-c, .bloco-c h2{
+.bloco-c, .bloco-gitc h2{
     background-color: #181818;
     color: #fff;
 }
