--- a/css/nav.css
+++ b/css/nav.css
@@ -3,9 +3,11 @@ header{
     background-color: #e63888;
     position: fixed;
     width: 100%;
-margin-bottom: 70px;
+    margin-bottom: 70px;
 }
-
+p{
+    line-height: 20px;
+}
 nav {
     max-width: 1200px;
     min-width: 200px;
