vinculando layout com wordpress

--- a/style.css
+++ b/style.css
@@ -4,5 +4,7 @@ Theme URI: www.developoc.com
 Author: Leonardo Alves 
 Description:Meu Tema desenvolvido em HTML, CSS, JS e PHP
 Version:0.1
-Tags: developoc, theme, wordpress 
+Tags: developoc, theme, wordpress s
 */
+
+@import 'main.css';
