--- a/style.css
+++ b/style.css
@@ -8,3 +8,15 @@ Tags: developoc, theme, wordpress s
 */
 
 @import 'main.css';
+
+.b-img img{
+    max-width: 500px;
+}
+
+.footer{
+    width: 100%;
+    height: 50px;
+    background-color:#383838;;
+    bottom: 0;
+    position: fixed;
+}
